REGRESSION(r136948): inspector/styles/import-pseudoclass-crash.html hits an assertion https://bugs.webkit.org/show_bug.cgi?id=104473

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Avoid building full CSSOM wrappers up front during rule matching.
Instead, move this code down to the point where these wrappers are actually needed.

* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::willMatchRule):
(WebCore::InspectorCSSAgent::willProcessRule):
* inspector/InspectorCSSAgent.h:
(WebCore):
(InspectorCSSAgent):
* inspector/InspectorInstrumentation.cpp:
(WebCore):
(WebCore::InspectorInstrumentation::willMatchRuleImpl):
(WebCore::InspectorInstrumentation::willProcessRuleImpl):

LayoutTests:

* platform/chromium/TestExpectations:
* platform/efl-wk2/TestExpectations:
* platform/qt/TestExpectations:

Canonical link: https://commits.webkit.org/122858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137303 268f45cc-cd09-0410-ab3c-d52691b4dbfc